# simplicial-complex-demo

./: Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
js/: index.js
src/: geometry.rs  handlers.rs  lib.rs  model.rs  shader.rs
static/: index.html
