[package]
name = "simplicial-complex"
description = "visualization of simplicial complex"
version = "0.1.0"
authors = ["Josh <josh@grayd.us>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
console_error_panic_hook = "0.1.7"
futures = "0.3.28"
getrandom = { version = "0.2.11", features = ["js"] }
js-sys = "0.3.64"
nalgebra = "0.32.3"
rand = "0.8.5"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"

[dependencies.web-sys]
version = "0.3.64"
features = [
  "CanvasRenderingContext2d",
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "KeyboardEvent",
  "MouseEvent",
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlRenderingContext",
  "WebGlShader",
  "WebGlUniformLocation",
  "Window"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
js-sys = "0.3.64"

